# GenAI-ProjectsByTheDevil

./: app.py  app_demo.py  chatbot.db  chatbot.ipynb  database_app.py  database_main.py  essay_generator.py  file_generator.py  ingesttion_pipeline.py  main.py  pyproject.toml  requirement  requirements.txt  testing_prototype.py
contacts/Jane Doe/: prospect.json  prospect_essay.txt
contacts/Jane Doe/vector_db/: chroma.sqlite3
db/chroma_db/: chroma.sqlite3
prospects/: prospect01.txt  prospect02.txt  prospect03.txt  prospect04.txt  prospect05.txt
prospects/chroma_db/: chroma.sqlite3
prospects_db/Jane_Doe/: chroma.sqlite3
prospects_db/chroma_db/: chroma.sqlite3
