[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-core>=1.2.21",
    "langchain-ollama>=1.0.1",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "psycopg>=3.3.3",
    "psycopg-pool>=3.3.0",
    "streamlit>=1.55.0",
]
